--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,8 +3,8 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
   margin: 0;
 }
 
